--- a/templates/manga_list.html
+++ b/templates/manga_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}{{ title }} - Manga List{% endblock %}
 
 {% block content %}
     <div class="container">
