--- a/templates/manga.html
+++ b/templates/manga.html
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6"><img class="img-fluid" src="{{ m.cover }}"><a href="{{ m.cover }}" target="_blank">
+            <div class="col-md-6"><img class="img-fluid" src="{{ m.cover }}" referrerpolicy="no-referrer"><a href="{{ m.cover }}" target="_blank">
                 <p style="margin-top: 8px;"><i class="fas fa-search-plus"></i>&nbsp;Open cover in new tab</p>
             </a></div>
             <div class="col-md-6">
