--- a/templates/manga_reader.html
+++ b/templates/manga_reader.html
@@ -11,7 +11,7 @@
             <div class="col-md-12 col-lg-12 text-center" style="margin-bottom: 4px;"><a class="btn btn-primary btn-sm" role="button" style="margin-right: 8px;" href="{{ a_prev }}">Prev</a><a class="btn btn-primary btn-sm" role="button" href="{{ a_next }}">Next</a></div>
         </div>
         <div class="row">
-            <div class="col-md-12 text-center"><a href="{{ a_next }}"><img class="img-fluid" src="{{ image }}"></a></div>
+            <div class="col-md-12 text-center"><a href="{{ a_next }}"><img class="img-fluid" src="{{ image }}" referrerpolicy="no-referrer"></a></div>
         </div>
         <div class="row">
             <div class="col-md-12 col-lg-12 text-center" style="margin-top: 4px;"><a class="btn btn-primary btn-sm" role="button" style="margin-right: 8px;" href="{{ a_prev }}">Prev</a><a class="btn btn-primary btn-sm" role="button" href="{{ a_next }}">Next</a></div>
