--- a/templates/manga_reader_inf.html
+++ b/templates/manga_reader_inf.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container"><div class="row">
         {% for image in images %}
-            <div class="col-md-12 text-center"><img class="img-fluid" src="{{ image }}" /></div>
+            <div class="col-md-12 text-center"><img class="img-fluid" src="{{ image }}" referrerpolicy="no-referrer"/></div>
         {% endfor %}
     </div>
         <div class="row">
@@ -23,7 +23,7 @@
                     <p>Click on an image to open it in a new tab</p><div class="container">
                     <div class="row">
                         {% for image in images %}
-                            <div class="col-md-6" style="margin-bottom: 24px;"><a href="{{ image }}" target="_blank"><img class="img-fluid" src="{{ image }}" /></a></div>
+                            <div class="col-md-6" style="margin-bottom: 24px;"><a href="{{ image }}" target="_blank"><img class="img-fluid" src="{{ image }}" referrerpolicy="no-referrer"/></a></div>
                         {% endfor %}
                     </div>
                 </div>
