Removed referrer from links

--- a/templates/manga_reader.html
+++ b/templates/manga_reader.html
@@ -15,7 +15,7 @@
         </div>
         <div class="row">
             <div class="col-md-12 col-lg-12 text-center" style="margin-top: 4px;"><a class="btn btn-primary btn-sm" role="button" style="margin-right: 8px;" href="{{ a_prev }}">Prev</a><a class="btn btn-primary btn-sm" role="button" href="{{ a_next }}">Next</a></div>
-            <div class="col-md-12 col-lg-12 text-center" style="margin-top: 4px;"><a href="{{ a_back }}" style="margin-right: 8px;"><i class="fas fa-long-arrow-alt-left"></i>&nbsp;Back to manga</a><a href="{{ image }}" target="_blank"><i class="fas fa-search-plus"></i>&nbsp;Open image in new tab</a></div>
+            <div class="col-md-12 col-lg-12 text-center" style="margin-top: 4px;"><a href="{{ a_back }}" style="margin-right: 8px;"><i class="fas fa-long-arrow-alt-left"></i>&nbsp;Back to manga</a><a href="{{ image }}" target="_blank" rel="noopener noreferrer"><i class="fas fa-search-plus"></i>&nbsp;Open image in new tab</a></div>
             <div class="col-md-12 col-lg-12 text-center" style="margin-top: 4px;"><a href="{{ s_url }}" style="margin-right: 8px;"><i class="fas fa-server"></i>&nbsp;Not loading? Switch to {{ s_text }}</a></div>
         </div>
     </div>
