--- a/templates/manga_reader_inf.html
+++ b/templates/manga_reader_inf.html
@@ -23,7 +23,7 @@
                     <p>Click on an image to open it in a new tab</p><div class="container">
                     <div class="row">
                         {% for image in images %}
-                            <div class="col-md-6" style="margin-bottom: 24px;"><a href="{{ image }}" target="_blank"><img class="img-fluid" src="{{ image }}" referrerpolicy="no-referrer"/></a></div>
+                            <div class="col-md-6" style="margin-bottom: 24px;"><a href="{{ image }}" target="_blank" rel="noopener noreferrer"><img class="img-fluid" src="{{ image }}" referrerpolicy="no-referrer"/></a></div>
                         {% endfor %}
                     </div>
                 </div>
